--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "angular-moment": "^1.3.0",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.33",
     "tslib": "^2.3.0",
